add firebase auth and private route

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
-/*This one is for all page, basically page will includes two div, one is main, the other */
-/*is footer-custom, everything else inside main */
+/*This one is for all page, basically page will includes two div, one is frame, the other */
+/*is footer-custom, everything else inside frame */
 html, body{
     height: 100%;
     background-color: oldlace;
